[project]
name = "online-fcl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.4",
    "keras>=3.15.0",
    "matplotlib==3.8.0",
    "medmnist==3.0.1",
    "numpy==1.26.4",
    "scikit-learn>=1.9.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers==4.40.2",
]
